# gamelibs-enchantum

./: meson.build
enchantum/include/enchantum/: entries.hpp  generators.hpp
tests/: generators.cpp
